# PyDepManger

./: .buildinfo  .gitignore  MANIFEST.in  README.md  genindex.html  index.html  objects.inv  page1.html  page2.html  page3.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  test.py
.github/workflows/: build_wheels.yml  d.yml  publish-to-test-pypi.yml  python-publish.yml  release.yaml  sphinx.yml  wheels.yml
PyDepManger/: __init__.py  interface.py
PyDepManger/core/: __init__.py  brain.py
PyDepManger/cpylibs/: AddArr.c  AddArr.pyi  __init__.py  helloworld.c  helloworld.pyi
PyDepManger/utils/: __init__.py  arrs.py  sayhi.py
_sources/: index.rst.txt  page2.rst.txt
docs/source/: conf.py  page1.rst  page3.rst
test/: unitest.py
