[build-system]
requires = ["setuptools", "setuptools_scm", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "PyDepManger"
dynamic = ["version"] 
dependencies = [
"pandas",
"numpy"
]

# Package Dir
[tool.setuptools.packages.find]
include = ["PyDepManger", "PyDepManger.*"]
namespaces = false


[tool.cibuildwheel]
build = "*"
skip = ["cp36-*", "cp37-*", "cp38-*", "cp39-*", "pp*", "*_i686", "*_ppc64le", "*_s390x"]

################################################
# This package is built on top of these pacs so these wont work anyway?
# Pandas : skip = "cp36-* cp37-* cp38-* cp39-* pp* *_i686 *_ppc64le *_s390x"
# Numpy : skip = "*_i686 *_ppc64le *_s390x *_universal2"
# sckit is on workflows
# scipy : skip = "cp36-* cp37-* cp38-* pp* *_ppc64le *_i686 *_s390x"
# Explanation:
# *_i686: Skip builds for 32-bit Intel architectures
# *_ppc64le: Skip builds for 64-bit PowerPC Little Endian architectures
# *_s390x: Skip builds for IBM Z (s390x) architectures
# *_universal2: Skip builds for macOS Universal 2 binaries (both x86_64 and arm64)

