[build-system]
requires = ["setuptools", "setuptools_scm", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "PyDepManger"
dynamic = ["version"] 
dependencies = [
"pandas",
"numpy"
]

# Package Dir
[tool.setuptools.packages.find]
include = ["PyDepManger", "PyDepManger.*"]
namespaces = false

[tool.cibuildwheel]
skip = "cp36-* cp37-* cp38-* cp39-* pp* *_i686 *_ppc64le *_s390x *_universal2"

################################################
# This package is built on top of these pacs so these wont work anyway?
# Pandas : skip = "cp36-* cp37-* cp38-* cp39-* pp* *_i686 *_ppc64le *_s390x"
# Numpy : skip = "*_i686 *_ppc64le *_s390x *_universal2"
# sckit is on workflows
# scipy : skip = "cp36-* cp37-* cp38-* pp* *_ppc64le *_i686 *_s390x"
# 

